<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/tv_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/app_brand"
        android:textAllCaps="true"
        android:theme="@style/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@id/tv_app"
        app:layout_constraintStart_toEndOf="@id/tv_app"
        app:layout_constraintTop_toTopOf="@id/tv_app" />

    <TextView
        android:id="@+id/tv_choose_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/desc_brand"
        android:theme="@style/description"
        app:layout_constraintTop_toBottomOf="@id/tv_app"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_media">

        <com.dindamaylan.storyapp.custom.EditText
            android:id="@+id/cet_email"
            style="@style/input_text"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/placeholder_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/grey"
            tools:ignore="TextContrastCheck,DuplicateClickableBoundsCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.dindamaylan.storyapp.custom.EditText
            android:id="@+id/cet_password"
            style="@style/input_text"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/placeholder_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/grey"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_alert"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/alert_login"
        android:theme="@style/alert"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/cta_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:theme="@style/cta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alert"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lexend"
        android:text="@string/login"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cta_forgot_password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/belum_punya_akun"
        android:theme="@style/description"
        app:layout_constraintEnd_toStartOf="@+id/cta_regist"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/cta_regist"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:theme="@style/cta"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0"
        android:background="@color/purple"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>