<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.add.StoryAddFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/story_add" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/story_img"
            android:paddingHorizontal="20dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@drawable/i_add_media" />

        <View
            android:id="@+id/v_devider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_story" />

        <TextView
            android:id="@+id/tv_choose_media"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/desc_selected_media"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_devider1" />

        <Button
            android:id="@+id/btn_camera"
            style="@style/button_text"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/broken_white"
            android:fontFamily="@font/lexend"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_media" />

        <Button
            android:id="@+id/btn_galery"
            style="@style/button_text"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/broken_white"
            android:fontFamily="@font/lexend"
            android:text="@string/galery"
            android:textAllCaps="false"
            android:textColor="@color/blue_dark"
            app:layout_constraintBottom_toBottomOf="@id/btn_camera"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintTop_toTopOf="@id/btn_camera" />

        <TextView
            android:id="@+id/tv_insert_desc"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/desc_insert_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_insert_desc">

            <com.dindamaylan.storyapp.custom.EditText
                android:id="@+id/cet_desc"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/placeholder_story"
                android:imeOptions="actionNext"
                android:inputType="text|textMultiLine|textCapSentences"
                android:isScrollContainer="true"
                android:maxLines="6"
                android:minLines="6"
                android:scrollbars="vertical"
                android:textIsSelectable="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_upload"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:enabled="false"
            android:fontFamily="@font/lexend"
            android:text="@string/upload"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/et_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/view_loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="@color/blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>