<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_story"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:backgroundTint="@color/grey"
    android:clickable="true"
    android:focusable="true"
    android:paddingVertical="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:strokeWidth="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/story_img"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/grey_400" />

        <TextView
            android:id="@+id/tv_user"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/placeholder"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_story"
            tools:text="@string/name_dum" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:paddingHorizontal="16dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/tv_user"
            app:layout_constraintStart_toStartOf="@+id/tv_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_user"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/tv_choose_media"
            style="@style/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_story"
            tools:ignore="NotSibling"
            tools:text="@string/desc_brand" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>