<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.story.add.StoryPreviewFragment">

    <ImageView
        android:id="@+id/iv_photo_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/preview_story"
        tools:src="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_btn_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        tools:ignore="NegativeMargin" />

    <ImageButton
        android:id="@+id/btn_cancel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_close"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/btn_ok"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ok"
        android:padding="2dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_ok" />


</androidx.constraintlayout.widget.ConstraintLayout>